--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
       <artifactId>guice-servlet</artifactId>
       <version>7.0.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-fileupload2-jakarta-servlet6 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-fileupload2-jakarta-servlet6</artifactId>
+      <version>2.0.0-M2</version>
+    </dependency>
   </dependencies>
 
   <build>
